--- a/inst/vignettes/tidyomics.bib
+++ b/inst/vignettes/tidyomics.bib
@@ -134,3 +134,75 @@ DOI = {10.12688/f1000research.22259.1}
     url = {https://doi.org/10.1093/bioinformatics/btad197},
     eprint = {https://academic.oup.com/bioinformatics/article-pdf/39/5/btad197/50259501/btad197.pdf},
 }
+
+@article{Lawrence2013,
+	author = {Lawrence, Michael and Huber, Wolfgang and Pages, Herve and Aboyoun, Patrick and Carlson, Marc and Gentleman, Robert and Morgan, Martin T and Carey, Vincent J},
+	journal = {PLOS Computational Biology},
+	number = {8},
+	pages = {e1003118},
+	publisher = {Public Library of Science San Francisco, USA},
+	title = {Software for computing and annotating genomic ranges},
+	volume = {9},
+	year = {2013},
+	doi = {10.1371/journal.pcbi.1003118}
+}
+
+@Article{Amezquita2020,
+author={Amezquita, Robert A.
+and Lun, Aaron T. L.
+and Becht, Etienne
+and Carey, Vince J.
+and Carpp, Lindsay N.
+and Geistlinger, Ludwig
+and Marini, Federico
+and Rue-Albrecht, Kevin
+and Risso, Davide
+and Soneson, Charlotte
+and Waldron, Levi
+and Pag{\`e}s, Herv{\'e}
+and Smith, Mike L.
+and Huber, Wolfgang
+and Morgan, Martin
+and Gottardo, Raphael
+and Hicks, Stephanie C.},
+title={Orchestrating single-cell analysis with Bioconductor},
+journal={Nature Methods},
+year={2020},
+month={Feb},
+day={01},
+volume={17},
+number={2},
+pages={137-145},
+issn={1548-7105},
+doi={10.1038/s41592-019-0654-x},
+url={https://doi.org/10.1038/s41592-019-0654-x}
+}
+
+@Article{ENCODE2012,
+author={ENCODE},
+title={An integrated encyclopedia of DNA elements in the human genome},
+journal={Nature},
+year={2012},
+month={Sep},
+day={01},
+volume={489},
+number={7414},
+pages={57-74},
+issn={1476-4687},
+doi={10.1038/nature11247},
+url={https://doi.org/10.1038/nature11247}
+}
+
+@article{Rainer2019,
+    author = {Rainer, Johannes and Gatto, Laurent and Weichenberger, Christian X},
+    title = "{ensembldb: an R package to create and use Ensembl-based annotation resources}",
+    journal = {Bioinformatics},
+    volume = {35},
+    number = {17},
+    pages = {3151-3153},
+    year = {2019},
+    month = {01},
+    issn = {1367-4803},
+    doi = {10.1093/bioinformatics/btz031},
+    url = {https://doi.org/10.1093/bioinformatics/btz031}
+}
