--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -4,7 +4,7 @@ author:
   - Stefano Mangiola, South Australian immunoGENomics Cancer Institute^[<mangiola.stefano@adelaide.edu.au>], Walter and Eliza Hall Institute^[<mangiola.s at wehi.edu.au>]
   - Luciano Martellotto, Adelaide Centre for Epigenetics, South Australian immunoGENomics Cancer Institute^[<luciano.martelotto@adelaide.edu.au>]
 output: rmarkdown::html_vignette
-# bibliography: "`r file.path(system.file(package='spatial_omics_workshop_2024', 'bibliography'), 'bibliography.bib')`"
+# bibliography: "`r file.path(system.file(package='tidySpatialWorkshop2024', 'bibliography'), 'bibliography.bib')`"
 vignette: >
   %\VignetteIndexEntry{Introduction to Spatial omic analyses}
   %\VignetteEncoding{UTF-8}
