--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -46,7 +46,25 @@ You can view the material at the workshop webpage
 ### Installation
 
 ```{r, eval=FALSE}
+# Install workshop package
+#install.packages('BiocManager')
+BiocManager::install("tidyomics/tidySpatialWorkshop2024", dependencies = TRUE)
 
+# In May 2024, the following packages should be installed from github repositories, to use the latest features. In case you have them pre installed, run the following command
+BiocManager::install(c("lmweber/ggspavis", 
+                       "stemangiola/tidySummarizedExperiment", 
+                       "william-hutchison/tidySpatialExperiment", 
+                       "stemangiola/tidybulk", 
+                       "stemangiola/tidygate", 
+                       "stemangiola/CuratedAtlasQueryR"), 
+                     update = FALSE)
+    
+# Then build the vignettes
+devtools::build_vignettes(pkg = "tidySpatialWorkshop2024")
+
+# To view vignette
+library(spatialOmicsWorkshop2024)
+vignette("Introduction")
 ```
 
 # Session 1: Introduction to Spatial Omics
