--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -63,7 +63,7 @@ BiocManager::install(c("lmweber/ggspavis",
                      update = FALSE)
     
 # Then build the vignettes
-devtools::build_vignettes(pkg = "tidySpatialWorkshop2024")
+BiocManager::install("tidyomics/tidySpatialWorkshop2024", build_vignettes = TRUE, force = TRUE)
 
 # To view vignette
 library(spatialOmicsWorkshop2024)
