--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -76,7 +76,7 @@ BiocManager::install("ggcorrplot")
 BiocManager::install("tidyomics/tidySpatialWorkshop2024", build_vignettes = TRUE, force=TRUE)
 
 # To view vignette
-library(spatialOmicsWorkshop2024)
+library(tidySpatialWorkshop2024)
 vignette("Introduction")
 ```
 
